src/objects/SFDC_Script_Campaign_Association__c.object
<CustomObject>
    <description>Associates a campaign with 1 or more scripts.</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Targeted Scripts</relationshipLabel>
        <relationshipName>R00N20000000oz8rEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <description>This is a link to a page for help with a question mark icon next to it, to make it visually friendly</description>
        <formula>(HYPERLINK(&quot;/servlet/servlet.FileDownload?file=015200000002o5K&quot;, &quot;Help for Scripts&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help for Scripts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Scripts</description>
        <label>Script</label>
        <referenceTo>SFDC_Script__c</referenceTo>
        <relationshipLabel>Included In Campaigns</relationshipLabel>
        <relationshipName>R00N20000000oz8qEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Script - Campaign Association</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Script - Campaign Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>